<resources>
    <string name="app_name">Трекер привычек</string>
    <string name="title_button_main">Продолжить</string>
    <string name="fg_text_one"> <b> Создать  </b> </string>
    <string name="fg_text_two"> <b> Создайте свою первую привычку  </b> </string>
    <string name="text_create_habit"> <b> Создайте новую привычку </b> </string>
    <string name="text_create_habit_two"> <b>+  Создать </b> </string>
    <string name="text_create_habit_three"> <b> ИЛИ ВЫБЕРИТЕ ИЗ УЖЕ ГОТОВЫХ </b></string>
    <string name="text_button_create_one"> <b> Неважно </b></string>
    <string name="text_button_create_two"> <b> Днем </b></string>
    <string name="text_button_create_three"> <b> Утром </b></string>
    <string name="text_button_create_four"> <b> Вечером  </b></string>
    <string name="title_text_main">Добро пожаловать</string>
    <string name="second_text_main"> Вы уже использовали приложение? </string>
    <string name="image_one">Image one</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="phone_field">Phone (89004553322)</string>
    <string name="name_field">Name</string>
    <string name="authorization_text"> <u> Авторизация</u> </string>
    <string name="authorization_text_two"> <u> Уже использовали приложение? </u> </string>
    <string name="habit_text">ГЛАВНАЯ</string>
    <string name="end_text">ЗАВЕРШЕНО</string>
    <string name="completed_text">ЗАВЕРШЕНО</string>
    <string name="failed_text">ПРОВАЛЕНО</string>
    <string name="history_text">ИСТОРИЯ</string>
    <string name="mark_text">РЕГУЛЯРНАЯ</string>
    <string name="cancel_text">ВРЕДНАЯ</string>
    <string name="pop_text">СТАТЬИ</string>
    <string name="person_text">Я</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button">Сохранить</string>
    <string name="color_button">Выберите цвет</string>
    <string name="matter_button">Неважно</string>
    <string name="day_button">Днем</string>
    <string name="evening_button">Вечером</string>
    <string name="morning_button">Утром</string>
    <string name="input_date"> Окончание:  янв 01, 2023</string>
    <string name="input_time">Выберите время</string>
    <string name="interval">Периодичность</string>
    <string name="end">Окончание</string>
    <string name="reminder">Напоминание</string>
    <string name="clear_date">Сброс</string>
    <string name="registration">Регистрация</string>
    <string name="name_habit">Название привычки</string>
    <string name="version">Version: 0.3.5</string>
    <string name="exit">Выход</string>
    <string name="finish_habit">Завершить</string>
    <string name="delete_habit">Удалить</string>
</resources>