<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/title_text_main"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:srcCompat="@drawable/image_one"
        android:contentDescription="@string/image_one"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="40dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainButton"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_below="@id/mainLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:background="@drawable/rounded_button"
        android:onClick="openNewWindow"
        android:text="@string/title_button_main"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/second_text_main"
            android:textColor="@color/white"
            android:textSize="11sp"
            />


        <TextView
            android:id="@+id/authorizationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/patua_one"
            android:text="@string/authorization_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </RelativeLayout>


</RelativeLayout>
