<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/volkhov"
            android:hint="@string/name_field"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/fieldHint"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/numberFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/volkhov"
            android:hint="@string/phone_field"
            android:inputType="phone"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/fieldHint"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/emailFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/volkhov"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/fieldHint"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/passwordFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/volkhov"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/fieldHint"
            android:textSize="20sp" />

    </LinearLayout>



</androidx.cardview.widget.CardView>