<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonNoAuthoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="78dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/authorization_text_two"
        android:textColor="@color/black"
        android:textSize="13sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="615dp"
        android:layout_marginStart="135dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/version"
        android:textColor="@color/fieldHint"
        android:textSize="13sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="56dp"
        android:background="@drawable/text_ripple"
        android:fontFamily="@font/patua_one"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listSettingNo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="170dp"
        android:divider="@null"
        android:dividerHeight="1dp" />

</FrameLayout>