<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_button_four"
        android:fontFamily="@font/patua_one"
        android:text="@string/clear_date"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:layout_marginTop="370dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/green_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patua_one"
                android:text="@string/completed_text"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patua_one"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="55sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/cross_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patua_one"
                android:text="@string/failed_text"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patua_one"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="55sp" />


        </RelativeLayout>

    </LinearLayout>


</FrameLayout>