<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_menu"
    tools:context=".SecondActivity">



    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/text_ripple"
        >


        <RelativeLayout
            android:id="@+id/lHabit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:onClick="openHabit"
            android:background="@drawable/circle_button"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageHabit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/habit" />


            <TextView
                android:id="@+id/textHabit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/patua_one"
                android:text="@string/habit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:onClick="openHistory"
            android:background="@drawable/circle_button"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageHistory"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/history" />

            <TextView
                android:id="@+id/textHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/patua_one"
                android:text="@string/history_text"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textSize="12sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:onClick="openPop"
            android:background="@drawable/circle_button"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagePop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/pop" />

            <TextView
                android:id="@+id/textPop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/patua_one"
                android:text="@string/pop_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="openPerson"
            android:background="@drawable/circle_button"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagePerson"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/peson" />

            <TextView
                android:id="@+id/textPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/patua_one"
                android:text="@string/person_text"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameMain"
        android:layout_width="match_parent"
        android:layout_height="817dp"
        android:layout_above="@+id/mainLinear"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="3dp"
        android:background="#fffad6">

    </FrameLayout>




</RelativeLayout>